<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>laser_geometry</name>
  <version>1.6.4</version>
  <description>
    This package contains a class for converting from a 2D laser scan as defined by
    sensor_msgs/LaserScan into a point cloud as defined by sensor_msgs/PointCloud
    or sensor_msgs/PointCloud2. In particular, it contains functionality to account
    for the skew resulting from moving robots or tilting laser scanners.
  </description>
  <maintainer email="dave.hershberger@sri.com">Dave Hershberger</maintainer>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <author>Tully Foote</author>
  <author>Radu Bogdan Rusu</author>

  <url>http://ros.org/wiki/laser_geometry</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python_cmake</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
